// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create new group 1`] = `
<Fragment>
  <Button
    id="metrics-create"
    onClick={[Function]}
  >
    custom_metrics.create_metric
  </Button>
</Fragment>
`;

exports[`should create new group 2`] = `
<Fragment>
  <Button
    id="metrics-create"
    onClick={[Function]}
  >
    custom_metrics.create_metric
  </Button>
  <Form
    confirmButtonText="create"
    domains={
      Array [
        "Coverage",
        "Issues",
      ]
    }
    header="custom_metrics.create_metric"
    onClose={[Function]}
    onSubmit={[MockFunction]}
    types={
      Array [
        "INT",
        "STRING",
      ]
    }
  />
</Fragment>
`;
